static/css/style.css
body {
    background-color: #f9fbfc;
    font-family: Merriweather, sans-serif;
}

h1,
h2,
h3,
h4 {
    font-family: Montserrat, sans-serif;
}

p {
    font-family: Merriweather, sans-serif;
}

.brand {
    font-family: Montserrat, sans-serif;
    font-size: 1.5rem;
    font-weight: 700;
    color: #2B547E;
}

.mauve-board {
    color: #804b6f;
}

.text-muted {
    font-family: Merriweather, sans-serif;
    color: #804b6f;
}


.thin {
    font-weight: 300;
}

.light-bg {
    background-color: #fff;
}

.bg-white {
    padding: 20px;
}

.dark-bg {
    background-color: #a01b3e;
}

.main-bg {
    background-color: #f9fbfc;
}

.card {
    border: none;
    background-color: transparent;
}

.image-container {
    position: relative;
}

.card-img-top {
    width: 300px;
    height: 200px;
}

.image-flash {
    position: absolute;
    bottom: 5%;
    min-width: 30%;
    left: -2px;
    background-color: #728FCE;
}

.author {
    color: white;
    margin: 4px;
    text-transform: uppercase;
    font-family: Montserrat, sans-serif;
}

.masthead {
    margin-top: 10px;
    overflow: hidden;
    position: relative;
    display: inline-block;
    width: 100%;
}

.masthead-text {
    background-color: #728FCE;
    color: white;
    position: relative;
    border: 2px solid rgba(25, 116, 210, 0.3);
}

.masthead-image {
    position: relative;
    overflow: hidden;
    border: 3px solid rgba(25, 116, 210, 0.3);
}


.post-link {
    text-decoration: none;
    color: #6c757d;
}

.post-link:hover,
.page-link {
    color: #d4dce5;
}

.post-title {
    margin-top: 20%;
    margin-left: 5%;
}

.post-subtitle {
    margin-left: 5%;
    color: lightgray;
}

.btn-signup {
    background-color: #728FCE;
    color: #fff;
    margin-top: 10px;
}

.btn-signup:hover,
.btn-signup:active {
    background-color: #fff;
    color: #728FCE;
}

.link {
    color: #728FCE;
    text-decoration: none;
}

.link:hover,
.link:active {
    color: #728FCE;
    text-decoration: underline;
}

.btn-like {
    color: #D22B2B;
    border: none;
    background: transparent;
}

.btn-like:hover,
.btn-like:active {
    color: #D22B2B;
    background: transparent;
    border: none;
}

.card-custom {
    background-color: #fff;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
    padding: 15px;
    transition: box-shadow 0.3s ease;
}

.card-custom:hover {
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
}

div.col-1.d-flex.align-items-center {
    padding: 0 !important;
}

.footer {
    background-color: rgba(43, 84, 126, 0.7);
}

.footer>i {
    background-color: #0909FF;
}

span.asteriskField {
    display: none;
}

label.requiredField {
    margin-bottom: 10px;
}

textarea#body_id.textarea.form-control {
    margin-top: 10px;
}

img.card-img-top {
    border: 3px solid rgba(25, 116, 210, 0.3);
}

footer>a {
    color: #fff;
}

